# PyQt-Billmate

./: .gitignore  MoneyMaker.spec  database.db  file_version_info.txt  main.py  metadata.yml  pyproject.toml
controllers/: base_controller.py  company_owner_controller.py  company_page_controller.py  freelancer_page_controller.py  home_page_controller.py  login_page_controller.py
hooks/: hook-pyqtspinner.py
models/: __init__.py  alchemy.py  company.py  company_owner.py  constant.py  db_context.py  employee.py  freelancer.py  user.py
resources/: resources.qrc  resources_rc.py
resources/styles/: style.qss
services/: excel_service.py  pdf_service.py  s.xlsx  test.xlsx
utils/: helpers.py  seeder.py  settings_manager.py  tools.py
utils/logger/: logger.py
utils/patterns/: singletone.py
view/: __init__.py  base_view.py  company_owner_page.py  company_page.py  freelancer_page.py  home_page.py  login_page.py  main_window.py
view/delegates/: delegate.py
view/ui/: login_window.py  login_window.ui  main_window.py  main_window.ui
view/widgets/: __init__.py  calendar_widget.py  combobox_widget.py  combobox_withadd_widget.py  date_widget.py  stack_widget.py  table_widget.py  text_edit_widget.py
