[tool.poetry]
name = "new folder"
version = "0.1.0"
description = ""
authors = ["Mostafa-M-Hussein <mostafaasey25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "=5.15.10"
pyqt5-qt5 = "=5.15.2"
python-json-logger = "^3.2.1"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.6"
faker = "^35.1.0"
directory-tree = "^1.0.0"
openpyxl = "^3.1.5"
mysql-connector-python = "^9.2.0"
pymysql = "^1.1.1"
asyncmy = "^0.2.10"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"
pyqtspinner = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
